Code clean up and rename appropriately

--- a/slr-parser-tests/slr-parser-tests.vcxproj
+++ b/slr-parser-tests/slr-parser-tests.vcxproj
@@ -24,6 +24,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>slrparsertests</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <ProjectName>parser-tools-tests</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -148,8 +149,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ParserToolTests.cpp" />
-    <ClCompile Include="ProductionRuleTests.cpp" />
-    <ClCompile Include="RunSLRParserTests.cpp" />
+    <ClCompile Include="RunAllTests.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
